generated/AssembParser.cpp

// Generated from Assemb.g4 by ANTLR 4.7.2


#include "AssembListener.h"
#include "AssembVisitor.h"

#include "AssembParser.h"


using namespace antlrcpp;
using namespace antlr4;

AssembParser::AssembParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

AssembParser::~AssembParser() {
  delete _interpreter;
}

std::string AssembParser::getGrammarFileName() const {
  return "Assemb.g4";
}

const std::vector<std::string>& AssembParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& AssembParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- FileContext ------------------------------------------------------------------

AssembParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AssembParser::FileContext::EOF() {
  return getToken(AssembParser::EOF, 0);
}

std::vector<AssembParser::LineContext *> AssembParser::FileContext::line() {
  return getRuleContexts<AssembParser::LineContext>();
}

AssembParser::LineContext* AssembParser::FileContext::line(size_t i) {
  return getRuleContext<AssembParser::LineContext>(i);
}


size_t AssembParser::FileContext::getRuleIndex() const {
  return AssembParser::RuleFile;
}

void AssembParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void AssembParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}


antlrcpp::Any AssembParser::FileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitFile(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::FileContext* AssembParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, AssembParser::RuleFile);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << AssembParser::T__4)
      | (1ULL << AssembParser::T__5)
      | (1ULL << AssembParser::T__6)
      | (1ULL << AssembParser::T__7)
      | (1ULL << AssembParser::T__8)
      | (1ULL << AssembParser::T__9)
      | (1ULL << AssembParser::T__10)
      | (1ULL << AssembParser::T__11)
      | (1ULL << AssembParser::T__12)
      | (1ULL << AssembParser::T__13)
      | (1ULL << AssembParser::T__14)
      | (1ULL << AssembParser::T__15)
      | (1ULL << AssembParser::T__16)
      | (1ULL << AssembParser::T__17)
      | (1ULL << AssembParser::Section)
      | (1ULL << AssembParser::Rop)
      | (1ULL << AssembParser::Iop)
      | (1ULL << AssembParser::Sop)
      | (1ULL << AssembParser::Bop)
      | (1ULL << AssembParser::Uop)
      | (1ULL << AssembParser::Jop)
      | (1ULL << AssembParser::Lop)
      | (1ULL << AssembParser::Szop)
      | (1ULL << AssembParser::Bzop)
      | (1ULL << AssembParser::Symbol)
      | (1ULL << AssembParser::IgnoreDirective))) != 0)) {
      setState(30);
      line();
      setState(35);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(36);
    match(AssembParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

AssembParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AssembParser::InstContext* AssembParser::LineContext::inst() {
  return getRuleContext<AssembParser::InstContext>(0);
}

AssembParser::PseudoInstContext* AssembParser::LineContext::pseudoInst() {
  return getRuleContext<AssembParser::PseudoInstContext>(0);
}

AssembParser::DirectiveContext* AssembParser::LineContext::directive() {
  return getRuleContext<AssembParser::DirectiveContext>(0);
}

AssembParser::StartContext* AssembParser::LineContext::start() {
  return getRuleContext<AssembParser::StartContext>(0);
}


size_t AssembParser::LineContext::getRuleIndex() const {
  return AssembParser::RuleLine;
}

void AssembParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void AssembParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}


antlrcpp::Any AssembParser::LineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitLine(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::LineContext* AssembParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 2, AssembParser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(42);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(38);
      inst();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(39);
      pseudoInst();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(40);
      directive();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(41);
      start();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstContext ------------------------------------------------------------------

AssembParser::InstContext::InstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AssembParser::RtypeContext* AssembParser::InstContext::rtype() {
  return getRuleContext<AssembParser::RtypeContext>(0);
}

AssembParser::ItypeContext* AssembParser::InstContext::itype() {
  return getRuleContext<AssembParser::ItypeContext>(0);
}

AssembParser::StypeContext* AssembParser::InstContext::stype() {
  return getRuleContext<AssembParser::StypeContext>(0);
}

AssembParser::BtypeContext* AssembParser::InstContext::btype() {
  return getRuleContext<AssembParser::BtypeContext>(0);
}

AssembParser::UtypeContext* AssembParser::InstContext::utype() {
  return getRuleContext<AssembParser::UtypeContext>(0);
}

AssembParser::JtypeContext* AssembParser::InstContext::jtype() {
  return getRuleContext<AssembParser::JtypeContext>(0);
}

AssembParser::LtypeContext* AssembParser::InstContext::ltype() {
  return getRuleContext<AssembParser::LtypeContext>(0);
}


size_t AssembParser::InstContext::getRuleIndex() const {
  return AssembParser::RuleInst;
}

void AssembParser::InstContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInst(this);
}

void AssembParser::InstContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInst(this);
}


antlrcpp::Any AssembParser::InstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitInst(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::InstContext* AssembParser::inst() {
  InstContext *_localctx = _tracker.createInstance<InstContext>(_ctx, getState());
  enterRule(_localctx, 4, AssembParser::RuleInst);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(51);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case AssembParser::Rop: {
        enterOuterAlt(_localctx, 1);
        setState(44);
        rtype();
        break;
      }

      case AssembParser::Iop: {
        enterOuterAlt(_localctx, 2);
        setState(45);
        itype();
        break;
      }

      case AssembParser::Sop: {
        enterOuterAlt(_localctx, 3);
        setState(46);
        stype();
        break;
      }

      case AssembParser::Bop: {
        enterOuterAlt(_localctx, 4);
        setState(47);
        btype();
        break;
      }

      case AssembParser::Uop: {
        enterOuterAlt(_localctx, 5);
        setState(48);
        utype();
        break;
      }

      case AssembParser::Jop: {
        enterOuterAlt(_localctx, 6);
        setState(49);
        jtype();
        break;
      }

      case AssembParser::Lop: {
        enterOuterAlt(_localctx, 7);
        setState(50);
        ltype();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StartContext ------------------------------------------------------------------

AssembParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AssembParser::StartContext::Symbol() {
  return getToken(AssembParser::Symbol, 0);
}


size_t AssembParser::StartContext::getRuleIndex() const {
  return AssembParser::RuleStart;
}

void AssembParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void AssembParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}


antlrcpp::Any AssembParser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::StartContext* AssembParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 6, AssembParser::RuleStart);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(AssembParser::Symbol);
    setState(54);
    match(AssembParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RtypeContext ------------------------------------------------------------------

AssembParser::RtypeContext::RtypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AssembParser::RtypeContext::Rop() {
  return getToken(AssembParser::Rop, 0);
}

std::vector<tree::TerminalNode *> AssembParser::RtypeContext::Reg() {
  return getTokens(AssembParser::Reg);
}

tree::TerminalNode* AssembParser::RtypeContext::Reg(size_t i) {
  return getToken(AssembParser::Reg, i);
}


size_t AssembParser::RtypeContext::getRuleIndex() const {
  return AssembParser::RuleRtype;
}

void AssembParser::RtypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRtype(this);
}

void AssembParser::RtypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRtype(this);
}


antlrcpp::Any AssembParser::RtypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitRtype(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::RtypeContext* AssembParser::rtype() {
  RtypeContext *_localctx = _tracker.createInstance<RtypeContext>(_ctx, getState());
  enterRule(_localctx, 8, AssembParser::RuleRtype);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(AssembParser::Rop);
    setState(57);
    dynamic_cast<RtypeContext *>(_localctx)->rd = match(AssembParser::Reg);
    setState(58);
    match(AssembParser::T__1);
    setState(59);
    dynamic_cast<RtypeContext *>(_localctx)->src1 = match(AssembParser::Reg);
    setState(60);
    match(AssembParser::T__1);
    setState(61);
    dynamic_cast<RtypeContext *>(_localctx)->src2 = match(AssembParser::Reg);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ItypeContext ------------------------------------------------------------------

AssembParser::ItypeContext::ItypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AssembParser::ItypeContext::Iop() {
  return getToken(AssembParser::Iop, 0);
}

std::vector<tree::TerminalNode *> AssembParser::ItypeContext::Reg() {
  return getTokens(AssembParser::Reg);
}

tree::TerminalNode* AssembParser::ItypeContext::Reg(size_t i) {
  return getToken(AssembParser::Reg, i);
}

AssembParser::ImmContext* AssembParser::ItypeContext::imm() {
  return getRuleContext<AssembParser::ImmContext>(0);
}


size_t AssembParser::ItypeContext::getRuleIndex() const {
  return AssembParser::RuleItype;
}

void AssembParser::ItypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterItype(this);
}

void AssembParser::ItypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitItype(this);
}


antlrcpp::Any AssembParser::ItypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitItype(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::ItypeContext* AssembParser::itype() {
  ItypeContext *_localctx = _tracker.createInstance<ItypeContext>(_ctx, getState());
  enterRule(_localctx, 10, AssembParser::RuleItype);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    match(AssembParser::Iop);
    setState(64);
    dynamic_cast<ItypeContext *>(_localctx)->rd = match(AssembParser::Reg);
    setState(65);
    match(AssembParser::T__1);
    setState(66);
    dynamic_cast<ItypeContext *>(_localctx)->src = match(AssembParser::Reg);
    setState(67);
    match(AssembParser::T__1);
    setState(68);
    dynamic_cast<ItypeContext *>(_localctx)->im = imm();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StypeContext ------------------------------------------------------------------

AssembParser::StypeContext::StypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AssembParser::StypeContext::Sop() {
  return getToken(AssembParser::Sop, 0);
}

std::vector<tree::TerminalNode *> AssembParser::StypeContext::Reg() {
  return getTokens(AssembParser::Reg);
}

tree::TerminalNode* AssembParser::StypeContext::Reg(size_t i) {
  return getToken(AssembParser::Reg, i);
}

AssembParser::ImmContext* AssembParser::StypeContext::imm() {
  return getRuleContext<AssembParser::ImmContext>(0);
}


size_t AssembParser::StypeContext::getRuleIndex() const {
  return AssembParser::RuleStype;
}

void AssembParser::StypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStype(this);
}

void AssembParser::StypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStype(this);
}


antlrcpp::Any AssembParser::StypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitStype(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::StypeContext* AssembParser::stype() {
  StypeContext *_localctx = _tracker.createInstance<StypeContext>(_ctx, getState());
  enterRule(_localctx, 12, AssembParser::RuleStype);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(AssembParser::Sop);
    setState(71);
    dynamic_cast<StypeContext *>(_localctx)->value = match(AssembParser::Reg);
    setState(72);
    match(AssembParser::T__1);
    setState(73);
    dynamic_cast<StypeContext *>(_localctx)->offset = imm();
    setState(74);
    match(AssembParser::T__2);
    setState(75);
    dynamic_cast<StypeContext *>(_localctx)->addr = match(AssembParser::Reg);
    setState(76);
    match(AssembParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BtypeContext ------------------------------------------------------------------

AssembParser::BtypeContext::BtypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AssembParser::BtypeContext::Bop() {
  return getToken(AssembParser::Bop, 0);
}

std::vector<tree::TerminalNode *> AssembParser::BtypeContext::Reg() {
  return getTokens(AssembParser::Reg);
}

tree::TerminalNode* AssembParser::BtypeContext::Reg(size_t i) {
  return getToken(AssembParser::Reg, i);
}

tree::TerminalNode* AssembParser::BtypeContext::Symbol() {
  return getToken(AssembParser::Symbol, 0);
}


size_t AssembParser::BtypeContext::getRuleIndex() const {
  return AssembParser::RuleBtype;
}

void AssembParser::BtypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBtype(this);
}

void AssembParser::BtypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBtype(this);
}


antlrcpp::Any AssembParser::BtypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitBtype(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::BtypeContext* AssembParser::btype() {
  BtypeContext *_localctx = _tracker.createInstance<BtypeContext>(_ctx, getState());
  enterRule(_localctx, 14, AssembParser::RuleBtype);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(AssembParser::Bop);
    setState(79);
    dynamic_cast<BtypeContext *>(_localctx)->src1 = match(AssembParser::Reg);
    setState(80);
    match(AssembParser::T__1);
    setState(81);
    dynamic_cast<BtypeContext *>(_localctx)->src2 = match(AssembParser::Reg);
    setState(82);
    match(AssembParser::T__1);
    setState(83);
    dynamic_cast<BtypeContext *>(_localctx)->label = match(AssembParser::Symbol);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UtypeContext ------------------------------------------------------------------

AssembParser::UtypeContext::UtypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AssembParser::UtypeContext::Uop() {
  return getToken(AssembParser::Uop, 0);
}

tree::TerminalNode* AssembParser::UtypeContext::Reg() {
  return getToken(AssembParser::Reg, 0);
}

AssembParser::ImmContext* AssembParser::UtypeContext::imm() {
  return getRuleContext<AssembParser::ImmContext>(0);
}


size_t AssembParser::UtypeContext::getRuleIndex() const {
  return AssembParser::RuleUtype;
}

void AssembParser::UtypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUtype(this);
}

void AssembParser::UtypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUtype(this);
}


antlrcpp::Any AssembParser::UtypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitUtype(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::UtypeContext* AssembParser::utype() {
  UtypeContext *_localctx = _tracker.createInstance<UtypeContext>(_ctx, getState());
  enterRule(_localctx, 16, AssembParser::RuleUtype);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(AssembParser::Uop);
    setState(86);
    dynamic_cast<UtypeContext *>(_localctx)->rd = match(AssembParser::Reg);
    setState(87);
    match(AssembParser::T__1);
    setState(88);
    dynamic_cast<UtypeContext *>(_localctx)->im = imm();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- JtypeContext ------------------------------------------------------------------

AssembParser::JtypeContext::JtypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AssembParser::JtypeContext::Jop() {
  return getToken(AssembParser::Jop, 0);
}

tree::TerminalNode* AssembParser::JtypeContext::Reg() {
  return getToken(AssembParser::Reg, 0);
}

AssembParser::ImmContext* AssembParser::JtypeContext::imm() {
  return getRuleContext<AssembParser::ImmContext>(0);
}


size_t AssembParser::JtypeContext::getRuleIndex() const {
  return AssembParser::RuleJtype;
}

void AssembParser::JtypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterJtype(this);
}

void AssembParser::JtypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitJtype(this);
}


antlrcpp::Any AssembParser::JtypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitJtype(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::JtypeContext* AssembParser::jtype() {
  JtypeContext *_localctx = _tracker.createInstance<JtypeContext>(_ctx, getState());
  enterRule(_localctx, 18, AssembParser::RuleJtype);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(AssembParser::Jop);
    setState(91);
    dynamic_cast<JtypeContext *>(_localctx)->rd = match(AssembParser::Reg);
    setState(92);
    match(AssembParser::T__1);
    setState(93);
    dynamic_cast<JtypeContext *>(_localctx)->im = imm();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LtypeContext ------------------------------------------------------------------

AssembParser::LtypeContext::LtypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AssembParser::LtypeContext::Lop() {
  return getToken(AssembParser::Lop, 0);
}

std::vector<tree::TerminalNode *> AssembParser::LtypeContext::Reg() {
  return getTokens(AssembParser::Reg);
}

tree::TerminalNode* AssembParser::LtypeContext::Reg(size_t i) {
  return getToken(AssembParser::Reg, i);
}

AssembParser::ImmContext* AssembParser::LtypeContext::imm() {
  return getRuleContext<AssembParser::ImmContext>(0);
}


size_t AssembParser::LtypeContext::getRuleIndex() const {
  return AssembParser::RuleLtype;
}

void AssembParser::LtypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLtype(this);
}

void AssembParser::LtypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLtype(this);
}


antlrcpp::Any AssembParser::LtypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitLtype(this);
  else
    return visitor->visitChildren(this);
}

AssembParser::LtypeContext* AssembParser::ltype() {
  LtypeContext *_localctx = _tracker.createInstance<LtypeContext>(_ctx, getState());
  enterRule(_localctx, 20, AssembParser::RuleLtype);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(AssembParser::Lop);
    setState(96);
    dynamic_cast<LtypeContext *>(_localctx)->rd = match(AssembParser::Reg);
    setState(97);
    match(AssembParser::T__1);
    setState(98);
    dynamic_cast<LtypeContext *>(_localctx)->im = imm();
    setState(99);
    match(AssembParser::T__2);
    setState(100);
    dynamic_cast<LtypeContext *>(_localctx)->rs = match(AssembParser::Reg);
    setState(101);
    match(AssembParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PseudoInstContext ------------------------------------------------------------------

AssembParser::PseudoInstContext::PseudoInstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t AssembParser::PseudoInstContext::getRuleIndex() const {
  return AssembParser::RulePseudoInst;
}

void AssembParser::PseudoInstContext::copyFrom(PseudoInstContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- RetContext ------------------------------------------------------------------

AssembParser::RetContext::RetContext(PseudoInstContext *ctx) { copyFrom(ctx); }

void AssembParser::RetContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRet(this);
}
void AssembParser::RetContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRet(this);
}

antlrcpp::Any AssembParser::RetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AssembVisitor*>(visitor))
    return parserVisitor->visitRet(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CallContext ------------------------------------------------------------------

tree::TerminalNode* AssembParser::CallContext::Symbol() {
  return getToken(AssembParser::Symbol, 0);
}

AssembParser::CallContext::CallContext(PseudoInstContext *ctx) { copyFrom(ctx); }

void AssembParser::CallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCall(this);
}
void AssembParser::CallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<AssembListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCall(this);
}
